<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@mipmap/ic_search_white_36dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/star_empty"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_history_black_48dp"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_login"
            android:icon="@mipmap/ic_account_box_black_48dp"
            android:title="@string/menu_login" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
